# echo-bering

./: .cgcignore  .gitignore  README.md  config.base.assemblyai.conversation.yaml  config.base.groq.short.yaml  config.base.mlx.long.yaml  config.base.mlx.yaml  config.example.yaml  config.large_groq.yaml  config.large_mlx.yaml  config.test.assembly.yaml  config.test.assemblyai.yaml  config.test.full.yaml  config.test.groq.chunked.yaml  config.test.groq.optimized.yaml  config.test.mlx.yaml  config.test.yaml  config.yaml  debug_checkpoints.py  generate_test_audio.py  pyproject.toml  test_mlx_words.py  test_speech.txt
.atl/: .skill-registry.cache.json  skill-registry.md
configs/: large_groq.yaml  large_mlx.yaml
configs/archive/: config.default.yaml.archived  config.test.5m.yaml  config.test.groq.yaml  config.test.improvements.yaml  config.test.real.yaml
configs/base/: config.base.assemblyai.yaml  config.base.groq.medium.yaml  config.base.groq.yaml  config.base.mlx.long.yaml
docs/: Comparativa_Proveedores_ASR.md  README.md
docs/Arquitectura/: Diagrama_de_Componentes.md  Diagrama_de_Contexto.md  Manejo_de_Errores.md  README.md  Trazabilidad.md
docs/Flujos_de_Negocio/: Pipeline_Principal.md  README.md
docs/Guias_Operativas/: Deployment.md  Guia_Casos_Extremos.md  Guia_de_Inicializacion_y_Pruebas.md  Hallazgos_Pruebas_End_to_End.md  Observabilidad_y_Health_Checks.md  README.md  Runbook_Comun.md
docs/Patrones_y_Mecanismos_Internos/: Adaptive_Chunking.md  Checkpointing_Resumable.md  Confidence_Scoring.md  Preprocesamiento_de_Transcripts.md  Provider_As_Visitors.md  README.md
docs/testing/: Estrategia_de_Pruebas.md  README.md
openspec/changes/core-pipeline/: tasks.md
prompts/: enricher.md  segmenter-basic.md  segmenter.md
src/: __init__.py  config.py  main.py
src/factories/: __init__.py  provider_factory.py
src/models/: chapter.py  transcription.py
src/orchestrators/: __init__.py  pipeline.py  utils.py
src/processors/: __init__.py  audio_extractor.py  chunking.py  enricher.py  materializer.py  segment_optimized_processor.py  segmenter.py  segmenter.py.bak  transcriber.py  transcript_preprocessor.py  transcript_processor.py  transcription_cleaner.py  transcription_reconstructor.py
src/providers/: __init__.py  factory.py
src/providers/asr/: __init__.py  assemblyai_asr.py  base.py  groq_asr.py  mlx_whisper_asr.py  openai_asr.py
src/providers/llm/: __init__.py  base.py  deepseek_llm.py  groq_llm.py  openai_llm.py
src/utils/: __init__.py  checkpoint.py  cost_estimator.py  env_loader.py  errors.py  json_extractor.py  logger.py  progress.py  prompt_manager.py  retry.py
tests/: conftest.py
tests/integration/: test_assemblyai_deepseek_integration.py  test_configuration_validation.py  test_edge_cases.py  test_end_to_end.py  test_groq_deepseek_integration.py  test_openai_integration.py  test_provider_fallbacks.py
tests/performance/: test_large_videos.py
tests/test_factories/: test_provider_factory.py
tests/unit/: test_config.py  test_main.py  test_prompt_validation.py
tests/unit/models/: test_chapter.py  (+1 more)
(+28 files in other folders)
