[project]
name = "echo-bering"
version = "0.1.0"
description = "Transform video files into enriched chapter packages with ASR and LLM intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Echo-Bering Contributors" }
]
keywords = ["video", "chapters", "asr", "llm", "transcription", "segmentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "backoff>=2.2",
    "groq>=0.4.0",
    "assemblyai>=0.30.0",
    "openai>=1.0.0",
    "python-multipart>=0.0.9",
    "gtts>=2.5.4",
    "pydub>=0.25.1",
    "mlx-whisper>=0.4.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4.0",
]

[project.scripts]
echo-bering = "src.main:cli"

[project.urls]
Homepage = "https://github.com/your-org/echo-bering"
Documentation = "https://github.com/your-org/echo-bering#readme"
Repository = "https://github.com/your-org/echo-bering"
Issues = "https://github.com/your-org/echo-bering/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: marks tests as integration tests",
]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
